# tarefa_example

./: README.md  celerybeat-schedule.bak  manage.py  pyproject.toml  tutorial-celery.txt
tarefa_example/: __init__.py  celery_app.py  settings.py  urls.py  wsgi.py
tarefas/: tasks.py
