[tool.poetry]
name = "tarefa_example"
version = "0.1.0"
description = "A task scheduler example using django and celery"
authors = ["Garibaldi"]

[tool.poetry.dependencies]
python = "^3.9"
celery = "*"
Django = "*"
redis = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
